# closer-to-whom

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-ci.yaml  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CITATION.cff  CODEX_INTEGRATION_PROMPT.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  GOVERNANCE.md  HANDOVER.md  Makefile  README.md  SECURITY.md  SUPPORT.md  VALIDATION.md  app.py  codemeta.json  compose.yaml  justfile  lefthook.yml  mise.toml  mkdocs.yml  noxfile.py  pyproject.toml  pyrightconfig.json  renovate.json
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  dependabot.yml  labeler.yml  pull_request_template.md  release.yml
.github/ISSUE_TEMPLATE/: bug.yml  method.yml  source-correction.yml
.github/policies/: repository-ruleset.md
.github/workflows/: ci.yml  clean-room.yml  contract-compatibility.yml  contracts.yml  dashboard.yml  dependency-review.yml  docs.yml  ecosystem-drift.yml  fuzz.yml  manuscript.yml  mojo-canary.yml  nightly.yml  publish-space.yml  release.yml  reproducibility.yml  scorecard.yml  security.yml  source-stats-nz-population.yml  supply-chain.yml  upstream-watch.yml
artifacts/: README.md
assumptions/: assumptions.yaml  distributions.yaml  mcda-profiles.yaml  performance-budgets.yaml  research-designs.yaml
benchmarks/: README.md  benchmark_core.py
conductor/: README.md  github-project.yaml  handover.yaml  project.yaml  release-gates.yaml  state.yaml  task-graph.json  verification-policy.yaml
conductor/decisions/: decision-log.yaml
conductor/receipts/: CTW-001-bootstrap.json  CTW-002-maximal-handover.json  CTW-010-national-service-census.json  CTW-020-public-demand-and-geography.json  CTW-030-clinical-pathway-freeze.json  CTW-040-national-routing-and-costs.json
conductor/tracks/: CTW-002-maximal-handover.yaml  CTW-010-national-service-census.yaml  CTW-020-public-demand-and-geography.yaml  CTW-030-clinical-pathway-freeze.yaml  CTW-040-national-routing-and-costs.yaml  CTW-050-national-analysis.yaml  CTW-060-publication-and-space.yaml  CTW-070-microdata-voi-decision.yaml  LIB-010-upstream-contracts.yaml
containers/: huggingface.Dockerfile  uv-requirements.txt
data/public/: clinical-pathway-review.yaml  demand-geography-records.yaml  governance-review.yaml  input-freeze.yaml  licence-policy.yaml  microdata-voi-decision.yaml  national-analysis-receipt.yaml  oia-requests.yaml  publication-gate.yaml  service-census-capabilities.yaml  service-census-records.yaml  service-census-review.yaml  source-registry.yaml
docs/: architecture.md  clinical-safety.md  data-governance.md  ethics-and-scope.md  github-ecosystem.md  index.md  model-card.md  threat-model.md
docs/adr/: 0001-arrow-polars-contracts.md  0002-public-aggregate-only.md  0003-optimisation-plus-mcda.md  0004-jax-and-mojo-promotion.md  0005-dashboard-precomputed-only.md
docs/methods/: demand-and-geography.md  optimisation-mcda.md  resilience.md  service-census.md  systematic-service-census.md  travel-and-costs.md  uncertainty-voi.md
docs/operations/: clinical-review-receipts.md  dashboard.md  data-refresh.md  ecosystem-drift.md  github-project.md  governance-review-receipts.md  incident-response.md  independent-review-pack.md  input-freeze.md  local-handover.md  microdata-voi-decision.md  national-analysis-receipts.md  publication-gate.md  release.md  reproducibility.md  scorecard-adjudication.md  source-receipts.md  testing.md  upstream-compatibility-receipts.md
docs/publication/: assumptions-appendix.md  manuscript-freeze.md  nzmj-protocol.md  strategy.md
docs/reference/: api.md
ecosystem/: classification-rubric.yaml  github-repositories.yaml  pipelines.yaml  snapshot-provenance.yaml  tool-contracts.yaml
fuzz/: __init__.py  fuzz_models.py
handover/: ASSEMBLY_NOTES.md
manuscript/: _quarto.yml  references.bib
manuscript/methods/: index.qmd
protocol/: claim-boundaries.yaml  clinical-safety-constraints.yaml  data-management-plan.md  decision-model-specification.yaml  protocol.yaml  reproducibility-plan.md  service-census-search.yaml  statistical-analysis-plan.yaml
release/: BOOTSTRAP_RELEASE_NOTES.md  clean-room-receipt.json  github-ecosystem-audit.json  inherited-inventory.json  jax-differential-receipt.json  publication-readiness.json  space-deployment-receipt.json  verification-receipt.json
reports/: clinical-pathway-freeze.json  demand-geography-flow.json  routing-costs-flow.json  service-census-coverage.json  service-census-disagreements.csv  service-census-flow.json
scenarios/: scenario-catalogue.yaml
scripts/: __init__.py  benchmark.py  bootstrap-local.sh  build_static_space.py  check_assumption_coverage.py  check_claim_boundaries.py  check_clinical_pathway_freeze.py  check_clinical_review_receipt.py  check_commit_message.py  check_complexity_budget.py  check_contracts.py  check_ecosystem_drift.py  check_generated_files.py  check_governance_review.py  check_input_freeze.py  check_lockfile_portability.py  check_machine_readability.py  check_microdata_voi_decision.py  check_national_analysis_receipt.py  check_privacy_and_licences.py  check_protocol.py  check_publication_gate.py  check_repository_hygiene.py  check_reproducibility.py  check_service_census_capabilities.py  check_source_receipts.py  check_source_registry.py  check_upstream_compatibility.py  check_version_consistency.py  check_workflow_hardening.py  check_workflows.py  clean_room_verify.py  create_release_manifest.py  dashboard_smoke.py  fetch_public_source.py  fetch_stats_nz_population_chunks.py  generate_assumptions_appendix.py  generate_json_schemas.py  generate_sbom.py  generate_schema_registry.py  (+14 more)
spaces/: README.md
tests/: conftest.py  test_jax_psa.py  test_optimisation_highs.py  test_source_fetch.py
upstream/: README.md  registry.yaml
(+147 files in other folders)
